<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:title="@string/sync_header"
        >

        <SwitchPreferenceCompat
            app:isPreferenceVisible="false"
            android:key="@string/pref_key_check"
            android:summary="@string/sync_title"
            android:title="@string/enable_push_notif" />


    </PreferenceCategory>

    <PreferenceCategory android:title="@string/data_source">

        <ListPreference
            android:defaultValue="true"
            android:dialogTitle="@string/select_data_source"
            android:entries="@array/pref_auto_lock_labels"
            android:entryValues="@array/pref_auto_lock_values"
            android:key="@string/pref_key_datasource"
            android:summary="@string/click_to_show"
            android:title="@string/data_source" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/other">

        <Preference
            android:defaultValue="true"
            android:dialogTitle="@string/what_is"
            android:key="@string/corona_virus_definition"
            android:title="@string/what_is" />
        <Preference
            android:defaultValue="true"
            android:dialogTitle="@string/covid_prevent"
            android:key="@string/coronavirus_prevention"
            android:title="@string/covid_prevent" />
        <ListPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue="true"
            android:dialogTitle="@string/change_theme"
            android:entries="@array/pref_auto_lock_labels_theme"
            android:entryValues="@array/pref_auto_lock_values_theme"
            android:key="@string/pref_key_theme"
            android:title="@string/change_theme" />
        <Preference
            android:id="@+id/preference"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue="true"
            android:dialogTitle="@string/change_language"
            android:key="@string/change_language"
            android:title="@string/change_language" />
        <Preference
            android:defaultValue="true"
            android:dialogTitle="@string/about"
            android:key="@string/about"
            android:title="@string/about" />
    </PreferenceCategory>
</androidx.preference.PreferenceScreen>
